# k8s-toy-operator

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
