[package]
name = "k8s-operator"
version = "0.1.0"
authors = ["guillaume.mazollier@soprabanking.com <guillaume.mazollier@soprabanking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_17"] }
kube = { version = "0.47.0", default-features = false, features = ["rustls-tls"] }
kube-runtime = { version = "0.47.0", default-features = false, features = ["rustls-tls"] }
log = "0.4.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.37"
serde_json = "1.0.61"
env_logger = "0.8.2"
rouille = "3.0.0"